[gd_scene load_steps=13 format=3 uid="uid://mwx7hdtetol8"]

[ext_resource type="Script" path="res://player/player.gd" id="1_fn4jj"]
[ext_resource type="Texture2D" uid="uid://ou7e14x7dt0w" path="res://shared/icon.svg" id="2_g23kb"]
[ext_resource type="Script" path="res://player/player_state/player_state_machine.gd" id="2_p6hic"]
[ext_resource type="Script" path="res://player/player_state/walking_player_state.gd" id="3_02v2g"]
[ext_resource type="Script" path="res://player/player_state/idle_player_state.gd" id="3_02xhs"]
[ext_resource type="Script" path="res://player/player_state/shield_player_state.gd" id="5_5ka5h"]
[ext_resource type="Script" path="res://player/aiming_player_state.gd" id="5_yi7xr"]
[ext_resource type="Script" path="res://player/impacted_player_state.gd" id="7_q13bo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jheaw"]
radius = 17.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ingjy"]
radius = 17.5
height = 46.0

[sub_resource type="Animation" id="Animation_p78ai"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ImpactShape:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ImpactShape:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AimerPivot:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f08og"]
_data = {
"RESET": SubResource("Animation_p78ai")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_fn4jj")

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("2_p6hic")
initial_state = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_02xhs")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_02v2g")

[node name="AimingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_yi7xr")

[node name="ShieldPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_5ka5h")

[node name="ImpactShapeLingerTimer" type="Timer" parent="PlayerStateMachine/ShieldPlayerState"]
wait_time = 0.1
one_shot = true

[node name="ImpactedPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_q13bo")

[node name="AimerPivot" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="AimerPivot"]
offset_top = -1.0
offset_right = 131.0
offset_bottom = 1.0

[node name="SpritePivot" type="Node2D" parent="."]

[node name="BodyTemp" type="Sprite2D" parent="SpritePivot"]
modulate = Color(0, 0, 2.703, 1)
position = Vector2(0, -1.5)
scale = Vector2(0.277344, 0.313519)
texture = ExtResource("2_g23kb")

[node name="HeadTemp" type="Sprite2D" parent="SpritePivot"]
modulate = Color(6.487, 3.243, 2.163, 1)
position = Vector2(0, -30)
scale = Vector2(0.171875, 0.171875)
texture = ExtResource("2_g23kb")

[node name="StateTemp" type="Label" parent="SpritePivot"]
texture_filter = 1
offset_left = -78.0
offset_top = -62.0
offset_right = 78.0
offset_bottom = -39.0
text = "???"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_jheaw")

[node name="ImpactShape" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactShape"]
position = Vector2(17.5, 0)
shape = SubResource("CapsuleShape2D_ingjy")
debug_color = Color(0.970114, 0, 0.456887, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f08og")
}
autoplay = "RESET"

[connection signal="timeout" from="PlayerStateMachine/ShieldPlayerState/ImpactShapeLingerTimer" to="PlayerStateMachine/ShieldPlayerState" method="_on_impact_shape_linger_timer_timeout"]

